@@ -13,3 +13,4 @@
 						usage of IShellView C++, implementation of IShellBrowser, ...
 09.08.2003	m. fuchs	class DesktopWindow for shell view on the desktop
 11.08.2003	m. fuchs	class BackgroundWindow for painting of desktop background
+						open child folders by double click in ShellBrowserChild
